# Employment-management-REST-API

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Employee.java  EmployeeController.java  EmployeeManagementApplication.java  EmployeeRepository.java  EmployeeService.java  LICENSE  Makefile  README.md  SECURITY.md  application.properties  docker-compose.yml  pom.xml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  models.py  repository.py
tests/: test_main.py
